Creato con Colaboratory

--- a/Decoder_with_warping_newDataset.ipynb
+++ b/Decoder_with_warping_newDataset.ipynb
@@ -40,7 +40,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,7 +64,7 @@
         "# ! pip3 install face_recognition\n",
         "# ! pip3 install tensorflow-gpu==1.15"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
         "# ! unzip face_features_hopenet.zip\n",
         "# ! ls -l Face_Feature/Faces | wc -l"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +106,7 @@
         "# !wget http://www.robots.ox.ac.uk/~vgg/research/CMBiometrics/data/zippedFaces.tar.gz \n",
         "# tar zxvf zippedFaces.tar.gz -C \"/content/drive/My Drive/Speech2Face/vox1_dataset/\""
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
       "source": [
         "# !curl --user voxceleb1912:0s42xuw6 -o \"/content/drive/My Drive/Speech2Face/ff/vox.zip\" http://www.robots.ox.ac.uk/~vgg/data/voxceleb/vox1a/vox1_test_wav.zip"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -156,7 +156,7 @@
         "from google.colab.patches import cv2_imshow\n",
         "import cv2"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -174,7 +174,7 @@
         "np.random.seed(42)\n",
         "random.seed(0)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -255,7 +255,7 @@
         "\n",
         "        return face_vectors.float(), torch.tensor(landmark).float(), self.transform_fd(image_).float()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -350,7 +350,7 @@
         "\n",
         "        return face_vectors, torch.tensor(landmark).float(), image_"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -465,7 +465,7 @@
         "        model.load_state_dict(state_dict)\n",
         "    return model"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -553,7 +553,7 @@
         "        if self.phase == \"train\":\n",
         "            return outL,  outT "
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -614,7 +614,7 @@
         "    def __call_(self, phase, img):\n",
         "        return self.data_transform[phase](img)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -819,7 +819,7 @@
         "\n",
         "        return warped_image, dense_flows"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -865,7 +865,7 @@
         "        X[i] = np.array(resultant)\n",
         "    return  X, flag"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -897,7 +897,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -907,7 +907,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 266
+          "height": 1000
         },
         "outputId": "b1e1e8d3-e639-4a9e-821e-101c55646922"
       },
@@ -1064,7 +1064,108 @@
             "loss: 1.9558447769709997 Steps: 896/7407\n",
             "loss: 1.927164614200592 Steps: 1024/7407\n",
             "loss: 1.8812722629970975 Steps: 1152/7407\n",
-            "loss: 1.8159977674484253 Steps: 1280/7407\n"
+            "loss: 1.8159977674484253 Steps: 1280/7407\n",
+            "loss: 1.7370710643855007 Steps: 1408/7407\n",
+            "loss: 1.681618109345436 Steps: 1536/7407\n",
+            "loss: 1.6616719731917748 Steps: 1664/7407\n",
+            "loss: 1.6234591220106398 Steps: 1792/7407\n",
+            "loss: 1.575554859638214 Steps: 1920/7407\n",
+            "loss: 1.5344884507358074 Steps: 2048/7407\n",
+            "loss: 1.5062388216747957 Steps: 2176/7407\n",
+            "loss: 1.4820720321602292 Steps: 2304/7407\n",
+            "loss: 1.4561854569535506 Steps: 2432/7407\n",
+            "loss: 1.4289794743061066 Steps: 2560/7407\n",
+            "loss: 1.4011505643526714 Steps: 2688/7407\n",
+            "loss: 1.3780344914306293 Steps: 2816/7407\n",
+            "loss: 1.3596617216649263 Steps: 2944/7407\n",
+            "loss: 1.3435796772440274 Steps: 3072/7407\n",
+            "loss: 1.325410885810852 Steps: 3200/7407\n",
+            "loss: 1.3062398594159346 Steps: 3328/7407\n",
+            "loss: 1.2892546764126531 Steps: 3456/7407\n",
+            "loss: 1.2758324827466692 Steps: 3584/7407\n",
+            "loss: 1.2635305544425701 Steps: 3712/7407\n",
+            "loss: 1.2494589686393738 Steps: 3840/7407\n",
+            "loss: 1.2356351248679622 Steps: 3968/7407\n",
+            "loss: 1.2229570969939232 Steps: 4096/7407\n",
+            "loss: 1.2126683321866123 Steps: 4224/7407\n",
+            "loss: 1.202831052681979 Steps: 4352/7407\n",
+            "loss: 1.1924765263284955 Steps: 4480/7407\n",
+            "loss: 1.1814971665541332 Steps: 4608/7407\n",
+            "loss: 1.172387355082744 Steps: 4736/7407\n",
+            "loss: 1.1640899902895878 Steps: 4864/7407\n",
+            "loss: 1.1556083743388836 Steps: 4992/7407\n",
+            "loss: 1.14616928845644 Steps: 5120/7407\n",
+            "loss: 1.1373509502992398 Steps: 5248/7407\n",
+            "loss: 1.1286618666989463 Steps: 5376/7407\n",
+            "loss: 1.1215716974679815 Steps: 5504/7407\n",
+            "loss: 1.1138796440579675 Steps: 5632/7407\n",
+            "loss: 1.1057235876719156 Steps: 5760/7407\n",
+            "loss: 1.0983721924864727 Steps: 5888/7407\n",
+            "loss: 1.0913003784544923 Steps: 6016/7407\n",
+            "loss: 1.0850004541377227 Steps: 6144/7407\n",
+            "loss: 1.0785780950468413 Steps: 6272/7407\n",
+            "loss: 1.072029528617859 Steps: 6400/7407\n",
+            "loss: 1.0656567987273722 Steps: 6528/7407\n",
+            "loss: 1.059639688867789 Steps: 6656/7407\n",
+            "loss: 1.0540851973137766 Steps: 6784/7407\n",
+            "loss: 1.0483225186665852 Steps: 6912/7407\n",
+            "loss: 1.043057982488112 Steps: 7040/7407\n",
+            "loss: 1.0377184163246835 Steps: 7168/7407\n",
+            "loss: 1.0329558671566479 Steps: 7296/7407\n",
+            "loss: 1.183548100137607 Steps: 7407/7407\n",
+            "Epoch: 0  || Loss: 1.0287137395282724\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "  5%|▍         | 1/21 [08:11<2:43:46, 491.31s/it]\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "loss: 0.7452476024627686 Steps: 128/7407\n",
+            "loss: 0.7487684488296509 Steps: 256/7407\n",
+            "loss: 0.7489922245343527 Steps: 384/7407\n",
+            "loss: 0.7456096708774567 Steps: 512/7407\n",
+            "loss: 0.7432042837142945 Steps: 640/7407\n",
+            "loss: 0.7437833150227865 Steps: 768/7407\n",
+            "loss: 0.745011934212276 Steps: 896/7407\n",
+            "loss: 0.7455275654792786 Steps: 1024/7407\n",
+            "loss: 0.7445623808436923 Steps: 1152/7407\n",
+            "loss: 0.7439715266227722 Steps: 1280/7407\n",
+            "loss: 0.7449884089556608 Steps: 1408/7407\n",
+            "loss: 0.7447529484828314 Steps: 1536/7407\n",
+            "loss: 0.7439993115571829 Steps: 1664/7407\n",
+            "loss: 0.744098356791905 Steps: 1792/7407\n",
+            "loss: 0.7433688640594482 Steps: 1920/7407\n",
+            "loss: 0.7431864589452744 Steps: 2048/7407\n",
+            "loss: 0.74335777759552 Steps: 2176/7407\n",
+            "loss: 0.7423043184810214 Steps: 2304/7407\n",
+            "loss: 0.7413695235001413 Steps: 2432/7407\n",
+            "loss: 0.7413421720266342 Steps: 2560/7407\n",
+            "loss: 0.7404796254067194 Steps: 2688/7407\n",
+            "loss: 0.7392418574203145 Steps: 2816/7407\n",
+            "loss: 0.7392229126847308 Steps: 2944/7407\n",
+            "loss: 0.7385694136222204 Steps: 3072/7407\n",
+            "loss: 0.7383058023452759 Steps: 3200/7407\n",
+            "loss: 0.7378284885333135 Steps: 3328/7407\n",
+            "loss: 0.7375544662828799 Steps: 3456/7407\n",
+            "loss: 0.7370569450514657 Steps: 3584/7407\n",
+            "loss: 0.7365592533144457 Steps: 3712/7407\n",
+            "loss: 0.736439577738444 Steps: 3840/7407\n",
+            "loss: 0.736049025289474 Steps: 3968/7407\n",
+            "loss: 0.7355035319924355 Steps: 4096/7407\n",
+            "loss: 0.7355900930635857 Steps: 4224/7407\n",
+            "loss: 0.7355563623063704 Steps: 4352/7407\n",
+            "loss: 0.7358673862048558 Steps: 4480/7407\n",
+            "loss: 0.7354225897126727 Steps: 4608/7407\n",
+            "loss: 0.7348619425618971 Steps: 4736/7407\n",
+            "loss: 0.735019785793204 Steps: 4864/7407\n"
           ],
           "name": "stdout"
         }
