Creato con Colaboratory

--- a/Decoder_with_warping_newDataset.ipynb
+++ b/Decoder_with_warping_newDataset.ipynb
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 126
         },
-        "outputId": "aade92be-4f7d-4429-e62f-f9a53900fdfd"
+        "outputId": "b3ac9f50-e3b0-4abc-ebeb-16afc3b743cc"
       },
       "source": [
         "from google.colab import drive\n",
@@ -62,38 +62,33 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 321
+          "height": 247
         },
-        "outputId": "14ff56b9-56cd-4253-fec7-e37cd4e96946"
+        "outputId": "57e65b07-592f-4713-b274-4e92d541dc11"
       },
       "source": [
         "# ! rm -r Face_Feature\n",
         "# ! cp /content/drive/My\\ Drive/Speech2Face/face_features/face_features_hopenet.zip .\n",
         "# ! unzip face_features_hopenet.zip\n",
         "# ! ls -l Face_Feature/Faces | wc -l\n",
-        "! pip install face_recognition"
+        "! pip install face_recognition\n",
+        "! pip3 install tensorflow-gpu==1.15"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting face_recognition\n",
             "  Downloading https://files.pythonhosted.org/packages/1e/95/f6c9330f54ab07bfa032bf3715c12455a381083125d8880c43cbe76bb3d0/face_recognition-1.3.0-py2.py3-none-any.whl\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from face_recognition) (1.18.5)\n",
+            "Requirement already satisfied: dlib>=19.7 in /usr/local/lib/python3.6/dist-packages (from face_recognition) (19.18.0)\n",
             "Collecting face-recognition-models>=0.3.0\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/cf/3b/4fd8c534f6c0d1b80ce0973d01331525538045084c73c153ee6df20224cf/face_recognition_models-0.3.0.tar.gz (100.1MB)\n",
-            "\u001b[K     |████████████████████████████████| 100.2MB 42kB/s \n",
-            "\u001b[?25hRequirement already satisfied: dlib>=19.7 in /usr/local/lib/python3.6/dist-packages (from face_recognition) (19.18.0)\n",
+            "\u001b[K     |████████████████████████████████| 100.2MB 96kB/s \n",
+            "\u001b[?25hRequirement already satisfied: Pillow in /usr/local/lib/python3.6/dist-packages (from face_recognition) (7.0.0)\n",
             "Requirement already satisfied: Click>=6.0 in /usr/local/lib/python3.6/dist-packages (from face_recognition) (7.1.2)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from face_recognition) (1.18.5)\n",
-            "Requirement already satisfied: Pillow in /usr/local/lib/python3.6/dist-packages (from face_recognition) (7.0.0)\n",
-            "Building wheels for collected packages: face-recognition-models\n",
-            "  Building wheel for face-recognition-models (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for face-recognition-models: filename=face_recognition_models-0.3.0-py2.py3-none-any.whl size=100566173 sha256=f3b67495e5d59454f835c0489364bc9d811e502dee5f20ae7effdeea0cd735ff\n",
-            "  Stored in directory: /root/.cache/pip/wheels/d2/99/18/59c6c8f01e39810415c0e63f5bede7d83dfb0ffc039865465f\n",
-            "Successfully built face-recognition-models\n",
-            "Installing collected packages: face-recognition-models, face-recognition\n",
-            "Successfully installed face-recognition-1.3.0 face-recognition-models-0.3.0\n"
+            "Building wheels for collected packages: face-recognition-models\n"
           ],
           "name": "stdout"
         }
@@ -160,7 +155,7 @@
         "from google.colab.patches import cv2_imshow\n",
         "import cv2"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,7 +173,7 @@
         "np.random.seed(42)\n",
         "random.seed(0)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -259,7 +254,7 @@
         "\n",
         "        return face_vectors.float(), torch.tensor(landmark).float(), self.transform_fd(image_).float()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -374,7 +369,7 @@
         "        model.load_state_dict(state_dict)\n",
         "    return model"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -462,7 +457,7 @@
         "        if self.phase == \"train\":\n",
         "            return outL,  outT "
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -732,7 +727,7 @@
         "\n",
         "        return warped_image, dense_flows"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -792,7 +787,7 @@
         "        X[i] = np.array(resultant)\n",
         "    return  X, flag"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -825,7 +820,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
