Creato con Colaboratory

--- a/Speech2Face_newDataset.ipynb
+++ b/Speech2Face_newDataset.ipynb
@@ -415,7 +415,7 @@
         "        elif self.phase == \"eval\":\n",
         "            return outT\n",
         "\n",
-        "def decoder_warping(weights_path=\"/content/drive/My Drive/Speech2Face/models/face_decoder_warping/epoch_0_steps_4800.pth\", fc3_only=False, **kwargs):\n",
+        "def decoder_warping(weights_path=\"/content/drive/My Drive/Speech2Face/models/face_decoder_warping/new_dataset_v2/epoch_16_steps_0.pth\", fc3_only=False, **kwargs):\n",
         "    \"\"\"\n",
         "    load imported model instance\n",
         "    Args:\n",
@@ -753,6 +753,12 @@
         "model = SpeechEncoder()\n",
         "model.to(device)\n",
         "\n",
+        "decoder = decoder_warping(fc3_only=True)\n",
+        "decoder.to(device)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "optimizer = torch.optim.Adam(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
         "#optimizer_decay = torch.optim.AdamW(model.parameters(), eps=1e-04, betas=(0.5, 0.999))    #, weight_decay=0.95)\n",
         "#optimizer = optimizer_decay\n",
@@ -807,7 +813,8 @@
         "    epochs: int,\n",
         "    train_dl: torch.utils.data.DataLoader,\n",
         "    model: torch.nn.Module,\n",
-        "    VGG: torch.nn.Module, \n",
+        "    VGG: torch.nn.Module,\n",
+        "    decoder: torch.nn.Module,\n",
         "    opt: torch.optim.Optimizer,\n",
         "    tag: str,\n",
         "    device: str = \"cuda\",\n",
@@ -868,8 +875,12 @@
         "            fvgg_s = VGG(output)\n",
         "            fvgg_f = features_fc8\n",
         "\n",
+        "            fdec_s = decoder(output)\n",
+        "            fdec_f = decoder(embedding)\n",
+        "            \n",
+        "\n",
         "            # loss = F.l1_loss(output, embedding)\n",
-        "            loss = F.l1_loss(output, embedding) + lambda1 * loss_2(output, embedding) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
+        "            loss = F.l1_loss(fdec_f, fdec_s) + lambda1 * loss_2(output, embedding) + lambda2 * dist_loss(fvgg_f, fvgg_s)\n",
         "            loss.backward()\n",
         "            opt.step()\n",
         "            opt.zero_grad()\n",
@@ -964,7 +975,7 @@
         "if check_path is not None:\n",
         "  global_ep = _load_checkpoint(check_path)  \n",
         "\n",
-        "fit(10, datal, model, vgg_fc8, optimizer, \"Speech2Face Training\", restart_epoch=global_ep)"
+        "fit(10, datal, model, vgg_fc8, decoder, optimizer, \"Speech2Face Training\", restart_epoch=global_ep)"
       ],
       "execution_count": null,
       "outputs": []
