--- a/Decoder_with_warping_newDataset_alt.ipynb
+++ b/Decoder_with_warping_newDataset_alt.ipynb
@@ -34,13 +34,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "ccd0d9f9-9815-49e3-e5b6-44b26a4215a8"
+        "outputId": "cf83815c-f0f2-4aba-e224-52a3024b7b10"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,13 +77,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "bc8ed3af-1d4c-4bdb-a9ab-796ab1518837"
+        "outputId": "964ba369-552b-4a15-9439-47f03f5d51e9"
       },
       "source": [
         "! cp /content/drive/My\\ Drive/Speech2Face/face_features_10_per_actor.zip .\n",
         "! unzip face_features_10_per_actor.zip"
       ],
-      "execution_count": 3,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +105,7 @@
       "source": [
         ""
       ],
-      "execution_count": 3,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
         "# !wget http://www.robots.ox.ac.uk/~vgg/research/CMBiometrics/data/zippedFaces.tar.gz \n",
         "# tar zxvf zippedFaces.tar.gz -C \"/content/drive/My Drive/Speech2Face/vox1_dataset/\""
       ],
-      "execution_count": 4,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
       "source": [
         "# !curl --user voxceleb1912:0s42xuw6 -o \"/content/drive/My Drive/Speech2Face/ff/vox.zip\" http://www.robots.ox.ac.uk/~vgg/data/voxceleb/vox1a/vox1_test_wav.zip"
       ],
-      "execution_count": 5,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
         "from google.colab.patches import cv2_imshow\n",
         "import cv2"
       ],
-      "execution_count": 6,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
         "np.random.seed(42)\n",
         "random.seed(0)"
       ],
-      "execution_count": 7,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -304,7 +304,7 @@
         "#dataset = EmbedImagePairs(input_path)\n",
         "#print(dataset[0])"
       ],
-      "execution_count": 31,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -419,7 +419,7 @@
         "        model.load_state_dict(state_dict)\n",
         "    return model"
       ],
-      "execution_count": 9,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -507,7 +507,7 @@
         "        if self.phase == \"train\":\n",
         "            return outL,  outT "
       ],
-      "execution_count": 10,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -568,7 +568,7 @@
         "    def __call_(self, phase, img):\n",
         "        return self.data_transform[phase](img)"
       ],
-      "execution_count": 11,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -773,7 +773,7 @@
         "\n",
         "        return warped_image, dense_flows"
       ],
-      "execution_count": 12,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -819,7 +819,7 @@
         "        X[i] = np.array(resultant)\n",
         "    return  X, flag"
       ],
-      "execution_count": 13,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -830,8 +830,8 @@
         "colab": {}
       },
       "source": [
-        "#checkpoint_path='/content/drive/My Drive/Speech2Face/models/face_decoder_warping/new_dataset_v4/epoch_95_steps_0.pth'\n",
-        "checkpoint_path=None\n",
+        "checkpoint_path='/content/drive/My Drive/Speech2Face/models/face_decoder_warping/new_dataset_v5/epoch_26_steps_0.pth'\n",
+        "#checkpoint_path=None\n",
         "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "# Set Model\n",
         "model = DECODER('train').to(device)\n",
@@ -852,7 +852,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -865,7 +865,7 @@
       "source": [
         "base_dir='/content/drive/My Drive/Speech2Face/'"
       ],
-      "execution_count": 15,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -875,9 +875,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 420
+          "height": 151
         },
-        "outputId": "ba961629-fe71-402a-8ea3-3ecfd98fe2d5"
+        "outputId": "ba7eb512-d9c6-4bdd-d6dd-64d8d2010a66"
       },
       "source": [
         "#import argparse\n",
@@ -962,7 +962,7 @@
         "        # w_img = cv2.cvtColor(result[0], cv2.COLOR_BGR2RGB)\n",
         "        #cv2_imshow(w_img)\n",
         "\n",
-        "        print(\"loss:\", running_loss / (x.shape[0] * count) , \"Steps:\", str(numOfElements) + \"/\" + str(dataset_len) )\n",
+        "        #print(\"loss:\", running_loss / (x.shape[0] * count) , \"Steps:\", str(numOfElements) + \"/\" + str(dataset_len) )\n",
         "\n",
         "        #if (numOfElements % (x.shape[0] * saving_steps)) == 0:\n",
         "        #  _save_model(epoch, model, optimizer, numOfElements, output_dir_name)\n",
@@ -1018,37 +1018,27 @@
         {
           "output_type": "stream",
           "text": [
+            "Image Pairing\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
             "\n",
             "\n",
             "\n",
             "\n",
-            "  0%|          | 0/81 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A\u001b[A"
+            "\n",
+            "  0%|          | 0/54 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "Image Pairing\n",
             "Creating dataloader\n",
-            "Start Training\n",
-            "loss: 52.302608489990234 Steps: 128/12117\n",
-            "loss: 51.53023338317871 Steps: 256/12117\n",
-            "loss: 51.16382853190104 Steps: 384/12117\n",
-            "loss: 51.66936111450195 Steps: 512/12117\n",
-            "loss: 52.076507568359375 Steps: 640/12117\n",
-            "loss: 52.19790776570638 Steps: 768/12117\n",
-            "loss: 52.13435091291155 Steps: 896/12117\n",
-            "loss: 52.18768262863159 Steps: 1024/12117\n",
-            "loss: 52.28740310668945 Steps: 1152/12117\n",
-            "loss: 52.34021987915039 Steps: 1280/12117\n",
-            "loss: 52.34658640081232 Steps: 1408/12117\n",
-            "loss: 52.50662803649902 Steps: 1536/12117\n",
-            "loss: 52.532684326171875 Steps: 1664/12117\n",
-            "loss: 52.58227757045201 Steps: 1792/12117\n",
-            "loss: 52.535779825846355 Steps: 1920/12117\n",
-            "loss: 52.46027421951294 Steps: 2048/12117\n",
-            "loss: 52.39029940436868 Steps: 2176/12117\n"
+            "Start Training\n"
           ],
           "name": "stdout"
         }
