--- a/Decoder_with_warping_newDataset_alt.ipynb
+++ b/Decoder_with_warping_newDataset_alt.ipynb
@@ -875,9 +875,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 151
+          "height": 1000
         },
-        "outputId": "ba7eb512-d9c6-4bdd-d6dd-64d8d2010a66"
+        "outputId": "121a8eda-e5ec-4e1b-859b-33a7abba3645"
       },
       "source": [
         "#import argparse\n",
@@ -1038,9 +1038,554 @@
           "output_type": "stream",
           "text": [
             "Creating dataloader\n",
-            "Start Training\n"
+            "Start Training\n",
+            "Epoch: 27  || Loss: 50.15786718387577\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "  2%|▏         | 1/54 [07:45<6:51:21, 465.70s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 28  || Loss: 50.086781580081976\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "  4%|▎         | 2/54 [15:05<6:36:54, 457.98s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 29  || Loss: 50.020199879193505\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "  6%|▌         | 3/54 [22:24<6:24:28, 452.33s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 30  || Loss: 49.95402770527639\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "  7%|▋         | 4/54 [29:45<6:14:01, 448.83s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 31  || Loss: 49.875652114579786\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "  9%|▉         | 5/54 [37:13<6:06:14, 448.46s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 32  || Loss: 49.808456566660986\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 11%|█         | 6/54 [44:48<6:00:30, 450.64s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 33  || Loss: 49.75199583752021\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 13%|█▎        | 7/54 [52:09<5:50:43, 447.73s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 34  || Loss: 49.68486497165485\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 15%|█▍        | 8/54 [59:21<5:39:29, 442.81s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 35  || Loss: 49.608068988003865\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 17%|█▋        | 9/54 [1:06:36<5:30:21, 440.47s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 36  || Loss: 49.53174090308699\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 19%|█▊        | 10/54 [1:13:49<5:21:30, 438.41s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 37  || Loss: 49.47353704713345\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 20%|██        | 11/54 [1:21:05<5:13:41, 437.71s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 38  || Loss: 49.40809057868037\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 22%|██▏       | 12/54 [1:28:15<5:04:42, 435.29s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 39  || Loss: 49.339069743296925\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 24%|██▍       | 13/54 [1:35:26<4:56:34, 434.02s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 40  || Loss: 49.25794012754912\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 26%|██▌       | 14/54 [1:42:32<4:47:48, 431.72s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 41  || Loss: 49.15069437589722\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 28%|██▊       | 15/54 [1:49:43<4:40:21, 431.32s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 42  || Loss: 49.10845019611341\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 30%|██▉       | 16/54 [1:56:49<4:32:14, 429.85s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 43  || Loss: 49.03543562958753\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 31%|███▏      | 17/54 [2:04:00<4:25:14, 430.11s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 44  || Loss: 48.97901690619175\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 33%|███▎      | 18/54 [2:11:08<4:17:47, 429.64s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 45  || Loss: 48.91203851960344\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 35%|███▌      | 19/54 [2:18:19<4:10:49, 429.98s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 46  || Loss: 48.855662532654335\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 37%|███▋      | 20/54 [2:25:27<4:03:21, 429.45s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 47  || Loss: 48.79536118255134\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 39%|███▉      | 21/54 [2:32:37<3:56:12, 429.47s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 48  || Loss: 48.74729357098671\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 41%|████      | 22/54 [2:39:41<3:48:10, 427.83s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 49  || Loss: 48.68315011553612\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 43%|████▎     | 23/54 [2:46:47<3:40:46, 427.31s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 50  || Loss: 48.63287883140549\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 44%|████▍     | 24/54 [2:53:52<3:33:15, 426.52s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 51  || Loss: 48.572689107397636\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 46%|████▋     | 25/54 [3:01:01<3:26:35, 427.44s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 52  || Loss: 48.51787315910776\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 48%|████▊     | 26/54 [3:08:08<3:19:19, 427.12s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 53  || Loss: 48.45622820538185\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 50%|█████     | 27/54 [3:15:17<3:12:33, 427.90s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 54  || Loss: 48.419606275779635\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 52%|█████▏    | 28/54 [3:22:23<3:05:09, 427.29s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 55  || Loss: 48.34169509149753\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            " 54%|█████▎    | 29/54 [3:29:32<2:58:16, 427.86s/it]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A"
+          ],
+          "name": "stderr"
         }
       ]
     },
