Removed unnecessary code. Changed torch.tensor() to torch.from_numpy()

--- a/Decoder_with_warping_newDataset_alt.ipynb
+++ b/Decoder_with_warping_newDataset_alt.ipynb
@@ -266,40 +266,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ABYY00967-y-",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "class UnNormalize(object):\n",
-        "    def __init__(self, mean, std):\n",
-        "        self.mean = mean\n",
-        "        self.std = std\n",
-        "\n",
-        "    def __call__(self, tensor):\n",
-        "        \"\"\"\n",
-        "        Args:\n",
-        "            tensor (Tensor): Tensor image of size (C, H, W) to be normalized.\n",
-        "        Returns:\n",
-        "            Tensor: Normalized image.\n",
-        "        \"\"\"\n",
-        "        for t, m, s in zip(tensor, self.mean, self.std):\n",
-        "            t.mul_(s).add_(m)\n",
-        "            # The normalize code -> t.sub_(m).div_(s)\n",
-        "        return tensor\n",
-        "\n",
-        "color_mean, color_std = [129.186279296875, 104.76238250732422, 93.59396362304688], [1,1,1]\n",
-        "color_mean = [tmp / 255.0 for tmp in color_mean]\n",
-        "color_std = [tmp / 255.0 for tmp in color_std]\n",
-        "\n",
-        "unnorm = UnNormalize(mean=(color_mean[0], color_mean[1], color_mean[2]), std=(color_std[0], color_std[1], color_std[2]))"
-      ],
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "k6SgTIZoqwYC",
         "colab_type": "code",
         "colab": {}
@@ -328,10 +294,6 @@
         "            img, self.color_mean, self.color_std)\n",
         "\n",
         "        return img\n",
-        "\n",
-        "color_mean, color_std = [129.186279296875, 104.76238250732422, 93.59396362304688], [1,1,1]\n",
-        "color_mean = [tmp / 255.0 for tmp in color_mean]\n",
-        "color_std = [tmp / 255.0 for tmp in color_std]\n",
         "\n",
         "class EmbedImagePairs(Dataset):\n",
         "    def __init__(self, data_list_path, size=64):\n",
@@ -405,9 +367,9 @@
         "        except IndexError:\n",
         "          return self[randint(0, len(self))]\n",
         "\n",
-        "        face_vectors = torch.tensor(self.face_features[features_index])\n",
+        "        face_vectors = torch.from_numpy(self.face_features[features_index])\n",
         "\n",
-        "        return face_vectors.float(), torch.tensor(landmark).float(), norm\n",
+        "        return face_vectors.float(), torch.from_numpy(landmark).float(), norm\n",
         "\n",
         "#input_path = '/content/content/Face_Feature/'\n",
         "#print('Image Pairing')\n",
@@ -985,7 +947,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 118
+          "height": 151
         },
         "outputId": "3e48439d-7b0e-4325-f1fe-f4480e5fd05b"
       },
@@ -1169,6 +1131,34 @@
           "output_type": "stream",
           "text": [
             "\r  2%|▏         | 2/81 [16:13<10:40:18, 486.31s/it]"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 2  || Loss: 0.6071464999670281\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\r  4%|▎         | 3/81 [24:06<10:26:49, 482.17s/it]"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch: 3  || Loss: 0.5916617892899607\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\r  5%|▍         | 4/81 [31:52<10:12:46, 477.49s/it]"
           ],
           "name": "stderr"
         }
